WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45084
[Qt] Title attribute is not respected on option elements
https://bugs.webkit.org/show_bug.cgi?id=45084
Summary
[Qt] Title attribute is not respected on option elements
Enrico Ros
Reported
2010-09-01 19:30:01 PDT
Created
attachment 66314
[details]
testcase for the bug If I create an <option> element with title="option's title text" in a <select>, the tooltip will not be shown. Patch is coming.
Attachments
testcase for the bug
(408 bytes, text/html)
2010-09-01 19:30 PDT
,
Enrico Ros
no flags
Details
Patch to fix 45084
(1.79 KB, patch)
2010-09-10 10:50 PDT
,
Enrico Ros
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrico Ros
Comment 1
2010-09-01 19:33:42 PDT
Verifying the patch...
Enrico Ros
Comment 2
2010-09-10 10:50:08 PDT
Created
attachment 67201
[details]
Patch to fix 45084 This is a oneliner.
Andreas Kling
Comment 3
2010-09-10 12:26:32 PDT
Comment on
attachment 67201
[details]
Patch to fix 45084
> + [Qt] Respect Title attribute op Option elements
Typo, s/op/on/
> +
https://bugs.webkit.org/show_bug.cgi?id=45084
>
Stray > at the end. r=me
Enrico Ros
Comment 4
2010-09-13 15:42:20 PDT
Thanks Andreas! Can you land the patch as well please? (I don't have enough karma :P)
Andreas Kling
Comment 5
2010-09-14 01:36:54 PDT
Committed
r67453
: <
http://trac.webkit.org/changeset/67453
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug