2010-09-14  Enrico Ros  <eros@codeaurora.org>

Reviewed by Andreas Kling.

        [Qt] Respect title attribute on option elements
        https://bugs.webkit.org/show_bug.cgi?id=45084

        Set the tooltip in the combo box model, so it's reflected in the view.

        * WebCoreSupport/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopup::populate):


Canonical link: https://commits.webkit.org/58184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67453 268f45cc-cd09-0410-ab3c-d52691b4dbfc